Attempt to fix breadcrumb width on Safari

--- a/src/main/webapp/app/shared/layouts/navbar/navbar.scss
+++ b/src/main/webapp/app/shared/layouts/navbar/navbar.scss
@@ -56,6 +56,7 @@ Navbar
 
         .breadcrumb-link {
             font-weight: lighter;
+            display: block;
         }
     }
 
